--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss-px-to-viewport-8-plugin": "^1.1.5",
     "tiny-emitter": "^2.1.0",
     "vue": "^3.2.13",
+    "vue-final-modal": "^3.4.4",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
