--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^3.2.13",
     "vue-final-modal": "^3.4.4",
     "vue-router": "^4.0.3",
+    "vue3-seamless-scroll": "^2.0.1",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
