--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "echarts": "^4.9.0",
+    "echarts-gl": "^2.0.9",
     "element-plus": "^2.2.13",
     "moment": "^2.29.4",
     "postcss-px-to-viewport-8-plugin": "^1.1.5",
