--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@zengxiaohui/vue3-seamless-scroll": "^2.2.4",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "echarts": "^5.1.2",
