--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@zengxiaohui/vue3-seamless-scroll": "^2.2.4",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "echarts": "^5.1.2",
@@ -20,7 +19,7 @@
     "vue": "^3.2.13",
     "vue-final-modal": "^3.4.4",
     "vue-router": "^4.0.3",
-    "vue3-seamless-scroll": "^2.0.1",
+    "vue-seamless-scroll": "^1.1.23",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
