--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "echarts-gl": "^2.0.9",
     "element-plus": "^2.2.13",
     "moment": "^2.29.4",
+    "ol": "^6.5.0",
     "postcss-px-to-viewport-8-plugin": "^1.1.5",
     "tiny-emitter": "^2.1.0",
     "vue": "^3.2.13",
-    "ol": "^6.5.0",
     "vue-final-modal": "^3.4.4",
     "vue-router": "^4.0.3",
     "vue-seamless-scroll": "^1.1.23",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
