--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "tiny-emitter": "^2.1.0",
     "vue": "^3.2.13",
     "vue-final-modal": "^3.4.4",
+    "vue-pdf-embed": "^1.1.4",
     "vue-router": "^4.0.3",
     "vue-seamless-scroll": "^1.1.23",
+    "vue3-pdfjs": "^0.1.6",
     "vuex": "^4.0.0",
     "vuex-persistedstate": "^4.1.0"
   },
@@ -38,8 +40,10 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "file-loader": "^6.2.0",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "url-loader": "^4.1.1"
   }
 }
