--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-pdf-embed": "^1.1.4",
     "vue-router": "^4.0.3",
     "vue-seamless-scroll": "^1.1.23",
+    "vue-virtual-scroller": "^2.0.0-alpha.1",
     "vue3-pdfjs": "^0.1.6",
     "vuex": "^4.0.0",
     "vuex-persistedstate": "^4.1.0"
