--- a/.env.prodJd
+++ b/.env.prodJd
@@ -2,3 +2,4 @@ NODE_ENV = 'prodJd'
 VUE_APP_ENV = 'prod'
 BASE_URL='/jd_water_one_cockpit/'
 VUE_APP_BASEURL='/cockpit-api'
+VUE_APP_DIST='jd_water_one_cockpit'
