--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.1.1",
     "echarts": "^5.1.2",
     "echarts-gl": "^2.0.9",
     "element-plus": "^2.2.13",
+    "jsencrypt": "^3.3.1",
     "md5": "^2.3.0",
     "moment": "^2.29.4",
     "ol": "^6.5.0",
