--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "crypto-js": "^4.1.1",
+    "dayjs": "^1.11.7",
     "echarts": "^5.1.2",
     "echarts-gl": "^2.0.9",
-    "element-plus": "^2.2.13",
+    "element-plus": "^2.3.2",
     "jsencrypt": "^3.3.1",
+    "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "moment": "^2.29.4",
     "ol": "^6.5.0",
